[+] calendar image instead of text

--- a/templates/acceuil/index.html.twig
+++ b/templates/acceuil/index.html.twig
@@ -229,9 +229,9 @@
                             </div>
                         </div>
                         <div class="carousel-item">
-                            <a href="{{ path('dojo') }}">
+                            <a href="{{ path('evenements') }}">
                                 <img class="d-block w-100"
-                                     src="https://dummyimage.com/600x400/000/fff&text=Planning"
+                                     src="{{ asset('assets/calendrier.jpg') }}"
                                      alt="">
                             </a>
                         </div>
@@ -383,9 +383,9 @@
                             </div>
                         </div>
                         <div class="carousel-item">
-                            <a href="{{ path('dojo') }}">
+                            <a href="{{ path('evenements') }}">
                                 <img class="d-block w-100"
-                                     src="https://dummyimage.com/600x400/000/fff&text=Planning"
+                                     src="{{ asset('assets/calendrier.jpg') }}"
                                      alt="">
                             </a>
                         </div>
