[+] same size for cells in navbar

--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -38,6 +38,12 @@
                 border-width: 5px !important;
                 background: white;
             }
+
+            @media (min-width: 992px) {
+                nav > div > ul > div > li {
+                    width: 130px;
+                }
+            }
         </style>
         {% block stylesheets %}{% endblock %}
     </head>
