[~] modif from meeting - background color in carousel

--- a/templates/acceuil/index.html.twig
+++ b/templates/acceuil/index.html.twig
@@ -99,7 +99,7 @@
                         <li data-target="#carouselAcceuilPosts" data-slide-to="3"></li>
                         <li data-target="#carouselAcceuilPosts" data-slide-to="4"></li>
                     </ol>
-                    <div class="carousel-inner" style="background: lightgray">
+                    <div class="carousel-inner" style="background: #A93514">
                         <div class="carousel-item active">
                             {% if first.images.count and firstType == 'Club' %}
                                 <a href="{{ path('actualites-club_show', {'id': first.id}) }}">
@@ -253,7 +253,7 @@
                         <li data-target="#carouselAcceuilPosts2" data-slide-to="3"></li>
                         <li data-target="#carouselAcceuilPosts2" data-slide-to="4"></li>
                     </ol>
-                    <div class="carousel-inner-little" style="background: lightgray">
+                    <div class="carousel-inner-little" style="background: #A93514">
                         <div class="carousel-item active">
                             {% if first.images.count and firstType == 'Club' %}
                                 <a href="{{ path('actualites-club_show', {'id': first.id}) }}">
