--- a/templates/inscription/adhesion.html.twig
+++ b/templates/inscription/adhesion.html.twig
@@ -28,6 +28,7 @@
             <li class="nav-item">
                 <a class="nav-link" id="apres-tab" data-toggle="tab" href="#apres" aria-controls="apres" aria-selected="true">
                     <h3 class="text-center">Après</h3>
+{#                    <img class="octagon img-fluid" src="{{ asset('assets/minionsTests.jpg') }}" alt="">#}
                     <img class="octagon img-fluid" src="https://dummyimage.com/280x280/000000/fff" alt="">
                 </a>
             </li>
