[~] FB and shop logo in navbar

--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -38,7 +38,6 @@
                 border-width: 5px !important;
                 background: white;
             }
-
             @media (min-width: 992px) {
                 nav > div > ul > div > li {
                     width: 130px;
@@ -51,6 +50,11 @@
         <div class="flex-grow-1 flex-shrink-0">
             <nav class="navbar navbar-expand-lg navbar-light sticky-top" style="background: #A93514">
                 <a class="border border-black" href="{{ path('accueil') }}" style="background: white"><img src="{{ asset('assets/luc_logo.png') }}" alt="luc_logo"></a>
+                <a href="{{ path('boutique') }}" class="d-none d-xl-block">
+                    <img src="{{ asset('assets/boutique-logo.png') }}"
+                         height="75"
+                         alt="boutique_logo">
+                </a>
                 <button class="navbar-toggler custom-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
                         aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
@@ -128,6 +132,11 @@
                         </div>
                     </ul>
                 </div>
+                <a href="https://www.facebook.com/pages/category/Amateur-Sports-Team/LUC-Judo-335783152973/" target="_blank" class="d-none d-xl-block">
+                    <img src="{{ asset('assets/fb_logo.png') }}"
+                         height="75"
+                         alt="fb_logo">
+                </a>
                 <div class="d-none d-lg-block">
                     <form class="form-inline">
                         <a class="border border-black" href="{{ path('accueil') }}" style="background: white"><img src="{{ asset('assets/luc_logo.png') }}" alt="luc_logo"></a>
@@ -135,7 +144,7 @@
                 </div>
             </nav>
             <div style="background: #A93514">
-                <div class="container-fluid d-block d-lg-none">
+                <div class="container-fluid d-block d-xl-none">
                     <div class="row text-center justify-content-center">
                         <div class="col my-auto">
                             <a href="{{ path('boutique') }}">
@@ -156,13 +165,6 @@
                 </div>
                 <div class="container-fluid">
                     <div class="row text-center justify-content-center">
-                        <div class="col-3 my-auto d-lg-block d-none">
-                            <a href="{{ path('boutique') }}">
-                                <img src="{{ asset('assets/boutique-logo.png') }}"
-                                     height="100"
-                                     alt="">
-                            </a>
-                        </div>
                         <div class="col d-md-none d-block">
                             <h1 class="text-center text-white" style="color: black"><strong>LILLE UNIVERSITE CLUB</strong><br/>
                                 <small class="text-white">
@@ -177,14 +179,6 @@
                             <h1 class="display-3 text-center text-white" style="color: black">
                                 <strong>LILLE UNIVERSITE CLUB</strong><br/>
                             </h1>
-                        </div>
-                        <div class="col-3 my-auto d-lg-block d-none">
-                            <a href="https://www.facebook.com/pages/category/Amateur-Sports-Team/LUC-Judo-335783152973/" target="_blank">
-                                <img src="{{ asset('assets/fb_logo.png') }}"
-                                     height="100"
-                                     width="100"
-                                     alt="fb_logo">
-                            </a>
                         </div>
                     </div>
                 </div>
