--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -15,6 +15,22 @@
             a, a:hover {
                 color: #A93514;
             }
+            .black-hover {
+                color: white;
+            }
+            .black-hover:hover {
+                color: black;
+            }
+            .black-bold-hover {
+                color: white;
+            }
+            .black-bold-hover:hover {
+                color: black;
+                font-weight: bold;
+            }
+            .bold-hover:hover {
+                font-weight: bold;
+            }
             .dropdown:hover .dropdown-menu{
                 display: block;
             }
@@ -187,21 +203,21 @@
                         <div class="col">
                             <h1 class="display-3">
                                 <small>
-                                    <a href="{{ path('judo') }}" class="text-white">JUDO</a>
+                                    <a href="{{ path('judo') }}" class="black-hover">JUDO</a>
                                 </small>
                             </h1>
                         </div>
                         <div class="col">
                             <h1 class="display-3">
                                 <small>
-                                    <a href="{{ path('ju-jitsu') }}" class="text-white">JUJITSU</a>
+                                    <a href="{{ path('ju-jitsu') }}" class="text-white bold-hover">JUJITSU</a>
                                 </small>
                             </h1>
                         </div>
                         <div class="col">
                             <h1 class="display-3">
                                 <small>
-                                    <a href="{{ path('taiso') }}" class="text-white">TAISO</a>
+                                    <a href="{{ path('taiso') }}" class="black-bold-hover">TAISO</a>
                                 </small>
                             </h1>
                         </div>
@@ -220,50 +236,50 @@
                             <div class="col">
                                 <figure class="figure">
                                     <img src="{{ asset('assets/politesse.png') }}"
-                                         class="figure-img img-fluid"
+                                         class="figure-img"
                                          alt="Politesse idéogramme">
                                     <figcaption class="figure-caption text-white">Politesse</figcaption>
                                 </figure>
                             </div>
                             <div class="col">
                                 <figure class="figure">
-                                    <img src="{{ asset('assets/courage.png') }}" class="figure-img img-fluid" alt="Courage idéogramme">
+                                    <img src="{{ asset('assets/courage.png') }}" class="figure-img" alt="Courage idéogramme">
                                     <figcaption class="figure-caption text-white">Courage</figcaption>
                                 </figure>
                             </div>
                             <div class="col">
                                 <figure class="figure">
-                                    <img src="{{ asset('assets/sincerite.png') }}" class="figure-img img-fluid" alt="Sincérité idéogramme">
+                                    <img src="{{ asset('assets/sincerite.png') }}" class="figure-img" alt="Sincérité idéogramme">
                                     <figcaption class="figure-caption text-white">Sincérité</figcaption>
                                 </figure>
                             </div>
                             <div class="col">
                                 <figure class="figure">
-                                    <img src="{{ asset('assets/honneur.png') }}" class="figure-img img-fluid" alt="Honneur idéogramme">
+                                    <img src="{{ asset('assets/honneur.png') }}" class="figure-img" alt="Honneur idéogramme">
                                     <figcaption class="figure-caption text-white">Honneur</figcaption>
                                 </figure>
                             </div>
                             <div class="col">
                                 <figure class="figure">
-                                    <img src="{{ asset('assets/modestie.png') }}" class="figure-img img-fluid" alt="Modestie idéogramme">
+                                    <img src="{{ asset('assets/modestie.png') }}" class="figure-img" alt="Modestie idéogramme">
                                     <figcaption class="figure-caption text-white">Modestie</figcaption>
                                 </figure>
                             </div>
                             <div class="col">
                                 <figure class="figure">
-                                    <img src="{{ asset('assets/respect.png') }}" class="figure-img img-fluid" alt="Respect idéogramme">
+                                    <img src="{{ asset('assets/respect.png') }}" class="figure-img" alt="Respect idéogramme">
                                     <figcaption class="figure-caption text-white">Respect</figcaption>
                                 </figure>
                             </div>
                             <div class="col">
                                 <figure class="figure">
-                                    <img src="{{ asset('assets/controle-de-soi.png') }}" class="figure-img img-fluid" alt="Contrôle de soi idéogramme">
+                                    <img src="{{ asset('assets/controle-de-soi.png') }}" class="figure-img" alt="Contrôle de soi idéogramme">
                                     <figcaption class="figure-caption text-white">Contrôle de soi</figcaption>
                                 </figure>
                             </div>
                             <div class="col">
                                 <figure class="figure">
-                                    <img src="{{ asset('assets/amitie.png') }}" class="figure-img img-fluid" alt="Amitié idéogramme">
+                                    <img src="{{ asset('assets/amitie.png') }}" class="figure-img" alt="Amitié idéogramme">
                                     <figcaption class="figure-caption text-white">Amitié</figcaption>
                                 </figure>
                             </div>
@@ -356,5 +372,12 @@
         <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
         <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
         {% block javascripts %}{% endblock %}
+        <script>
+            (function($){
+                $(document).on('contextmenu', 'img', function() {
+                    return false;
+                })
+            })(jQuery);
+        </script>
     </body>
 </html>
