[~] change evenement to calendrier

--- a/templates/acceuil/index.html.twig
+++ b/templates/acceuil/index.html.twig
@@ -229,7 +229,7 @@
                             </div>
                         </div>
                         <div class="carousel-item">
-                            <a href="{{ path('evenements') }}">
+                            <a href="{{ path('calendrier') }}">
                                 <img class="d-block w-100"
                                      src="{{ asset('assets/calendrier.jpg') }}"
                                      alt="">
@@ -383,7 +383,7 @@
                             </div>
                         </div>
                         <div class="carousel-item">
-                            <a href="{{ path('evenements') }}">
+                            <a href="{{ path('calendrier') }}">
                                 <img class="d-block w-100"
                                      src="{{ asset('assets/calendrier.jpg') }}"
                                      alt="">
