--- a/templates/actualites/evenements-show.html.twig
+++ b/templates/actualites/evenements-show.html.twig
@@ -16,6 +16,6 @@
         <p>
             {{ evenement.description|raw }}
         </p>
-        <a href="{{ path('evenements') }}">Revenir au calendrier</a>
+        <a href="{{ path('calendrier') }}">Revenir au calendrier</a>
     </div>
 {% endblock %}
