[~] calendrier text and mobile display on accueil

--- a/templates/acceuil/index.html.twig
+++ b/templates/acceuil/index.html.twig
@@ -78,7 +78,7 @@
     </div>
     <div class="container-fluid">
         <div class="row text-center justify-content-center">
-            <div class="col-xl my-auto order-2 order-xl-1">
+            <div class="col-xl my-auto order-2 order-xl-1 d-none d-md-block">
                 <h2>SALLE DEBEYRE</h2>
                 <div class="iframe-outer">
                     <div class="iframe-inner">
@@ -88,7 +88,7 @@
                         </iframe>
                     </div>
                 </div>
-                <h2>156 rue Charles Debierre</h2>
+                <h2>156 rue Charles Debierre Lille</h2>
             </div>
             <div class="col-xl-6 order-1 order-xl-2">
                 <div id="carouselAcceuilPosts" class="carousel slide d-none d-md-block" data-ride="carousel">
@@ -400,7 +400,7 @@
                     </a>
                 </div>
             </div>
-            <div class="col-xl my-auto order-3">
+            <div class="col-xl my-auto order-3 d-none d-md-block">
                 <h2>SALLE DEFAUCOMPRET</h2>
                 <div class="iframe-outer">
                     <div class="iframe-inner">
@@ -410,7 +410,29 @@
                         </iframe>
                     </div>
                 </div>
-                <h2>72-74 rue du Long Pot</h2>
+                <h2>72-74 rue du Long Pot Lille</h2>
+            </div>
+        </div>
+        <div class="row text-center d-block d-md-none">
+            <div class="col my-auto">
+                <h2>SALLE DEBEYRE</h2>
+                <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2530.75805227567!2d3.071911315859676!3d50.63161128217546!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x47c2d58ccd84a095%3A0x2bf07e00b55a0265!2sSalle%20Debeyre!5e0!3m2!1sfr!2sfr!4v1595951862220!5m2!1sfr!2sfr"
+                        frameborder="0"
+                        width="100%"
+                        height="300"
+                        allowfullscreen>
+                </iframe>
+                <h2>156 rue Charles Debierre Lille</h2>
+            </div>
+            <div class="col my-auto">
+                <h2>SALLE DEFAUCOMPRET</h2>
+                <iframe src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d894.800914630943!2d3.0873630056344954!3d50.62936125849722!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x47c2d5faea376d7d%3A0x4f55bddb5cd9f71d!2sEspace%20Sportif%20Defaucompret!5e0!3m2!1sfr!2sfr!4v1595857882269!5m2!1sfr!2sfr"
+                        frameborder="0"
+                        width="100%"
+                        height="300"
+                        allowfullscreen>
+                </iframe>
+                <h2>72-74 rue du Long Pot Lille</h2>
             </div>
         </div>
     </div>
