--- a/templates/disciplines/ju-jitsu.html.twig
+++ b/templates/disciplines/ju-jitsu.html.twig
@@ -80,7 +80,7 @@
                                     </iframe>
                                 </div>
                             </div>
-                            <h2>156 rue Charles Debierre</h2>
+                            <h2>156 rue Charles Debierre Lille</h2>
                         </div>
                     </div>
                 </div>
