--- a/templates/disciplines/judo.html.twig
+++ b/templates/disciplines/judo.html.twig
@@ -140,7 +140,7 @@
                                     </iframe>
                                 </div>
                             </div>
-                            <h2>156 rue Charles Debierre</h2>
+                            <h2>156 rue Charles Debierre Lille</h2>
                         </div>
                         <div class="col my-auto">
                             <h2>SALLE DEFAUCOMPRET</h2>
@@ -152,7 +152,7 @@
                                     </iframe>
                                 </div>
                             </div>
-                            <h2>72-74 rue du Long Pot</h2>
+                            <h2>72-74 rue du Long Pot Lille</h2>
                         </div>
                     </div>
                 </div>
