--- a/templates/disciplines/taiso.html.twig
+++ b/templates/disciplines/taiso.html.twig
@@ -97,7 +97,7 @@
                                     </iframe>
                                 </div>
                             </div>
-                            <h2>72-74 rue du Long Pot</h2>
+                            <h2>72-74 rue du Long Pot Lille</h2>
                         </div>
                     </div>
                 </div>
