[~] boutique and FB position on accueil

--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -66,11 +66,13 @@
         <div class="flex-grow-1 flex-shrink-0">
             <nav class="navbar navbar-expand-lg navbar-light sticky-top" style="background: #A93514">
                 <a class="border border-black" href="{{ path('accueil') }}" style="background: white"><img src="{{ asset('assets/luc_logo.png') }}" alt="luc_logo"></a>
+                <div class="w-100"></div>
                 <a href="{{ path('boutique') }}" class="d-none d-xl-block">
                     <img src="{{ asset('assets/boutique-logo.png') }}"
-                         height="75"
+                         height="80"
                          alt="boutique_logo">
                 </a>
+                <div class="w-100"></div>
                 <button class="navbar-toggler custom-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
                         aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
@@ -148,11 +150,13 @@
                         </div>
                     </ul>
                 </div>
+                <div class="w-100"></div>
                 <a href="https://www.facebook.com/pages/category/Amateur-Sports-Team/LUC-Judo-335783152973/" target="_blank" class="d-none d-xl-block">
                     <img src="{{ asset('assets/fb_logo.png') }}"
-                         height="75"
+                         height="80"
                          alt="fb_logo">
                 </a>
+                <div class="w-100"></div>
                 <div class="d-none d-lg-block">
                     <form class="form-inline">
                         <a class="border border-black" href="{{ path('accueil') }}" style="background: white"><img src="{{ asset('assets/luc_logo.png') }}" alt="luc_logo"></a>
