--- a/templates/acceuil/index.html.twig
+++ b/templates/acceuil/index.html.twig
@@ -234,6 +234,9 @@
                                      src="{{ asset('assets/calendrier.jpg') }}"
                                      alt="">
                             </a>
+                            <div class="carousel-caption d-none d-md-block">
+                                <h1 class="text-dark" style="background: white">Calendrier</h1>
+                            </div>
                         </div>
                     </div>
                     <a class="carousel-control-prev" href="#carouselAcceuilPosts" role="button" data-slide="prev">
